--- a/Src/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/Src/InventoryService.Messages/InventoryService.Messages.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Request\GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\InventoryOperationErrorMessage.cs" />
     <Compile Include="Response\PurchaseFromHoldsCompletedMessage.cs" />
     <Compile Include="Response\PurchaseCompletedMessage.cs" />
     <Compile Include="Request\PurchaseFromHoldsMessage.cs" />
