Fix holds, fix tests, have a storage check in place

--- a/Src/InventoryService.Storage/InventoryService.Storage.csproj
+++ b/Src/InventoryService.Storage/InventoryService.Storage.csproj
@@ -43,6 +43,8 @@
     <Compile Include="IInventoryStorage.cs" />
     <Compile Include="RealTimeInventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageOperationResult.cs" />
+    <Compile Include="StorageWriteCheck.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
