--- a/InventoryService.Storage.InMemory/InventoryService.Storage.InMemoryLib.csproj
+++ b/InventoryService.Storage.InMemory/InventoryService.Storage.InMemoryLib.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InMemory.cs" />
+    <Compile Include="InMemoryDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
