--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\RealTimeInventory.cs" />
     <Compile Include="Request\GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\InventoryOperationErrorMessage.cs" />
