--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -4,8 +4,8 @@
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
   <appSettings>
-    <!--<add key="Storage" value="InventoryService.Storage.InMemory, InventoryService.Storage.InMemory" />-->
-    <add key="Storage" value="InventoryService.Storage.EsentLib.Esent, InventoryService.Storage.EsentLib" />
+    <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
+    <!--<add key="Storage" value="InventoryService.Storage.EsentLib.Esent, InventoryService.Storage.EsentLib" />-->
     <add key="ServerActorSystemName" value="InventoryService-Server" />
   </appSettings>
   <startup>
@@ -40,7 +40,8 @@ akka {
               log-sent-messages = on
                 helios.tcp {
                     port = 8099
-                    hostname = "0.0.0.0"
+                    hostname = 127.0.0.1
+                   
                 }
             }
 }
