--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -4,7 +4,7 @@
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
   <appSettings>
-    <add key="Storage" value="InventoryService.Storage.InMemory, InventoryService.Storage.InMemory" />
+     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
   </appSettings>
   <akka>
     <hocon>
