--- a/InventoryService.Tests/InventoryService.Tests.csproj
+++ b/InventoryService.Tests/InventoryService.Tests.csproj
@@ -77,6 +77,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IInventoryServiceCompletedMessageExtrensions.cs" />
+    <Compile Include="Inventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyTests.cs" />
     <Compile Include="TestHelper.cs" />
