--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -40,11 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorType.cs" />
+    <Compile Include="InventoryServiceErrorMessageGenerator.cs" />
     <Compile Include="Models\RealTimeInventory.cs" />
+    <Compile Include="RealTimeInventoryException.cs" />
     <Compile Include="Request\GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IRequestMessage.cs" />
     <Compile Include="Request\UpdateAndHoldQuantityMessage.cs" />
-    <Compile Include="Response\IInventoryServiceCompletedMessage.cs" />
+    <Compile Include="IInventoryServiceCompletedMessage.cs" />
     <Compile Include="Response\InventoryOperationErrorMessage.cs" />
     <Compile Include="Response\PurchaseFromHoldsCompletedMessage.cs" />
     <Compile Include="Response\PurchaseCompletedMessage.cs" />
