--- a/InventoryService.ServiceDeployment/packages.config
+++ b/InventoryService.ServiceDeployment/packages.config
@@ -7,15 +7,20 @@
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.3.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
