--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Request\GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRequestMessage.cs" />
+    <Compile Include="Request\QueryInventoryListCompletedMessage.cs" />
+    <Compile Include="Request\QueryInventoryListMessage.cs" />
     <Compile Include="Request\UpdateAndHoldQuantityMessage.cs" />
     <Compile Include="IInventoryServiceCompletedMessage.cs" />
     <Compile Include="Response\InventoryOperationErrorMessage.cs" />
