--- a/InventoryService.Storage/InventoryService.Storage.csproj
+++ b/InventoryService.Storage/InventoryService.Storage.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IInventoryStorage.cs" />
+    <Compile Include="AnInventoryStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageOperationResult.cs" />
     <Compile Include="StorageWriteCheck.cs" />
