Add a stop supervision strategy to to actor

--- a/InventoryService/InventoryService.csproj
+++ b/InventoryService/InventoryService.csproj
@@ -51,6 +51,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actors\GetRemovedProductCompletedMessage.cs" />
+    <Compile Include="Actors\GetRemovedProductMessage.cs" />
+    <Compile Include="Actors\RemoveProductMessage.cs" />
     <Compile Include="Services\IProductInventoryOperations.cs" />
     <Compile Include="Services\OperationResult.cs" />
     <Compile Include="Services\ProductInventoryOperations.cs" />
