Fix supervison strategy

--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -1,5 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+  </configSections>
+  <appSettings>
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
+  </appSettings>
+  <akka>
+    <hocon>
+      <![CDATA[
+akka {
+    actor {
+
+        provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
+
+        debug {
+            receive = on
+            autoreceive = on
+            lifecycle = on
+            event-stream = on
+            unhandled = on
+        }
+    }
+
+    remote {
+                helios.tcp {
+                    port = 0
+                    hostname  = localhost
+                }
+            }
+}
+      ]]>
+    </hocon>
+  </akka>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
