Update UI, trying to add async test

--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -8,6 +8,7 @@
     <!--<add key="Storage" value="InventoryService.Storage.EsentLib.Esent, InventoryService.Storage.EsentLib" />-->
     <add key="ServerEndPoint" value="http://*:9200/" />
     <add key="ServerActorSystemName" value="InventoryService-Server" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
