--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -26,8 +26,8 @@ akka {
 
     remote {
                 helios.tcp {
-                    port = 0
-                    hostname  = localhost
+                    port = 9968
+                    hostname = localhost
                 }
             }
 }
@@ -42,6 +42,10 @@ akka {
       <dependentAssembly>
         <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
