--- a/InventoryService.Tests/InventoryService.Tests.csproj
+++ b/InventoryService.Tests/InventoryService.Tests.csproj
@@ -97,6 +97,10 @@
       <Project>{0A7A978D-2BD7-4A10-9088-28C74B5AFF80}</Project>
       <Name>InventoryService.Messages</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InventoryService.Storage.Esent\InventoryService.Storage.EsentLib.csproj">
+      <Project>{5515E3D0-E58F-4637-8044-48E05EE35B96}</Project>
+      <Name>InventoryService.Storage.EsentLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryService.Storage.InMemory\InventoryService.Storage.InMemoryLib.csproj">
       <Project>{94389D22-92E0-4933-A1C9-41CAB38FFD7C}</Project>
       <Name>InventoryService.Storage.InMemoryLib</Name>
