--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -11,6 +11,11 @@
     <hocon>
       <![CDATA[
 akka {
+
+        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
+              stdout-loglevel = DEBUG
+              loglevel = DEBUG
+              log-config-on-start = on   
     actor {
 
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
@@ -25,9 +30,12 @@ akka {
     }
 
     remote {
+              log-remote-lifecycle-events = DEBUG
+              log-received-messages = on
+              log-sent-messages = on    
                 helios.tcp {
                     port = 9968
-                    hostname = localhost
+                    hostname = 0.0.0.0
                 }
             }
 }
