--- a/InventoryService.ServiceDeployment/InventoryService.ServiceDeployment.csproj
+++ b/InventoryService.ServiceDeployment/InventoryService.ServiceDeployment.csproj
@@ -151,6 +151,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="topshelf-uninstall.bat" />
+    <None Include="topshelf-install.bat" />
     <None Include="docker-publish.bat" />
     <None Include="docker-publish.ps1" />
     <None Include="packages.config" />
