--- a/InventoryService.ServiceDeployment/App.config
+++ b/InventoryService.ServiceDeployment/App.config
@@ -6,9 +6,10 @@
   <appSettings>
     <add key="Storage" value="InventoryService.Storage.InMemoryLib.InMemory, InventoryService.Storage.InMemoryLib" />
     <!--<add key="Storage" value="InventoryService.Storage.EsentLib.Esent, InventoryService.Storage.EsentLib" />-->
-    <add key="ServerEndPoint" value="http://*:9200/" />
+    <add key="ServerEndPoint" value="http://*:10080/" />
+    <add key="EsentStoragePath" value="../" />
     <add key="ServerActorSystemName" value="InventoryService-Server" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <connectionStrings>
   </connectionStrings>
@@ -25,21 +26,21 @@ akka {
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
 
         debug {
-            receive = on
-            autoreceive = on
-            lifecycle = on
-            event-stream = on
+            receive = off
+            autoreceive = off
+            lifecycle = off
+            event-stream = off
             unhandled = on
         }
     }
 
     remote {
               log-remote-lifecycle-events = DEBUG
-              log-received-messages = on
-              log-sent-messages = on
+              log-received-messages = off
+              log-sent-messages = off
                 helios.tcp {
-                    port = 8099
-                    hostname = 0.0.0.0
+                    port = 10000
+                    hostname =0.0.0.0
                     public-hostname = "localhost"
                 }
             }
