--- a/InventoryService.TestUitlity/App.config
+++ b/InventoryService.TestUitlity/App.config
@@ -5,12 +5,18 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
+    <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
       <![CDATA[
 akka {
+
+        loggers = ["Akka.Logger.NLog.NLogLogger, Akka.Logger.NLog"]
+              stdout-loglevel = DEBUG
+              loglevel = DEBUG
+              log-config-on-start = on   
     actor {
 
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
@@ -25,9 +31,12 @@ akka {
     }
 
     remote {
+              log-remote-lifecycle-events = DEBUG
+              log-received-messages = on
+              log-sent-messages = on    
                 helios.tcp {
-                    port = 9968
-                    hostname = localhost
+                    port = 0
+                    hostname = 0.0.0.0
                 }
             }
 }
