--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -5,7 +5,8 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
+    <!--<add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />-->
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
@@ -26,8 +27,8 @@ akka {
 
     remote {
                 helios.tcp {
-                    port = 9912
-                    hostname  = localhost
+                    port = 0
+                     hostname =0.0.0.0
                 }
             }
 }
